terraform/plan/s3-best-practices/abort-incomplete-uploads/test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: good-test
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../abort-incomplete-uploads.yaml --payload ./good-payload.json --output json --bindings ./binding.yaml
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: abort-incomplete-uploads
                rules:
                - rule:
                    name: abort-incomplete-uploads
                  error: ~
                  violations: ~
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test-01
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../abort-incomplete-uploads.yaml --payload ./bad-payload-01.json --output json --bindings ./binding.yaml
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: abort-incomplete-uploads
                rules:
                - rule:
                    name: abort-incomplete-uploads
                  error: ~
                  violations:
                  - message: Use the `aws_s3_bucket_lifecycle_configuration` resource to enable lifecycle configuration.
                    errors:
                    - type: FieldValueInvalid
                      value: false
                      detail: 'Expected value: true'
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test-02
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../abort-incomplete-uploads.yaml --payload ./bad-payload-02.json --output json --bindings ./binding.yaml
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: abort-incomplete-uploads
                rules:
                - rule:
                    name: abort-incomplete-uploads
                  error: ~
                  violations:
                  - message: S3 Bucket Lifecycle Configuration 'status' needs to be set to 'Enabled'
                    errors:
                    - type: FieldValueInvalid
                      value: false
                      detail: 'Expected value: true'
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test-03
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../abort-incomplete-uploads.yaml --payload ./bad-payload-03.json --output json --bindings ./binding.yaml
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: abort-incomplete-uploads
                rules:
                - rule:
                    name: abort-incomplete-uploads
                  error: ~
                  violations:
                  - message: Set the 'days_after_initiation' argument value to a Positive Integer value in 'abort_incomplete_multipart_upload' inside the lifecycle configuration block
                    errors:
                    - type: FieldValueInvalid
                      value: false
                      detail: 'Expected value: true'
